# paperworkagent

./: .gitignore  README.md  exploration_test.json  fullpaper.claims.json  fullpaper.md  pyproject.toml
.cursor/skills/claim-explorer/: SKILL.md
.cursor/skills/claim-extractor/: SKILL.md
.cursor/skills/fact-check-claim/: SKILL.md
.cursor/skills/literature-search/: SKILL.md
.cursor/skills/paper-reference-agent/: SKILL.md
config/: project.yaml
docs/: architecture.md  claim-explorer-data-structures.md  claim-explorer-requirements.md  claim-extractor-requirements.md  requirements.md
scripts/: exploration_test.json  main.py  test_claims.json  test_explore.py  test_extract.py  test_paper.md
src/paperworkagent/: __init__.py  cli.py  config.py  log.py  models.py  orchestrator.py
src/paperworkagent/assess/: fact_checker.py
src/paperworkagent/common/: cache.py  llm.py
src/paperworkagent/explore/: __init__.py  cache.py  config.py  dedup.py  explorer.py  llm.py  models.py  query_generator.py  relevance_filter.py
src/paperworkagent/extract/: config.py  extractor.py  models.py
src/paperworkagent/infra/: cache.py  rate_limiter.py
src/paperworkagent/ingest/: claim_extractor.py  markdown_parser.py  results_loader.py
src/paperworkagent/llm/: client.py
src/paperworkagent/retrieve/: __init__.py  deduplicator.py  fulltext_fetcher.py  query_builder.py
tests/: conftest.py
tests/fixtures/: sample_paper.md
tests/test_assess/: test_fact_checker.py
tests/test_ingest/: test_claim_extractor.py  test_markdown_parser.py
tests/test_write/: test_write.py
(+14 files in other folders)
