[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperworkagent"
version = "0.1.0"
description = "논문 초안에서 주장을 추출하고, 관련 문헌을 검색하며, 사실 검증과 참고문헌 추천을 수행하는 에이전트"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "markdown-it-py>=3.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "litellm>=1.40",
    "diskcache>=5.6",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
paper-agent = "paperworkagent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/paperworkagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
